updated login page

--- a/store.html
+++ b/store.html
@@ -22,9 +22,9 @@
                 <div class="search">
                     <input type="text" class="search-box" placeholder="search items...">
                     <button class="search-btn">search</button>
+                    <a href="/login.html"><img src="img/user.png" alt=""></a>
+                    <a href="#"><img src="img/cart.png" alt=""></a>
                 </div>
-                <a href="login/static/login.html"><img src="img/user.png" alt=""></a>
-                <a href="#"><img src="img/cart.png" alt=""></a>
             </div>
         </div>
         <h1 class="band-name band-name-large"></h1>
