--- a/about.html
+++ b/about.html
@@ -15,13 +15,37 @@
                 <li><a href="about.html">ABOUT</a></li>
             </ul>
         </nav>
-        <h1 class="band-name band-name-large">Style U!</h1>
+        <nav class="navbar"></nav>
+        <div class="nav">
+            <div class="nav-items">
+                <div class="search">
+                    <input type="text" class="search-box" placeholder="search items...">
+                    <button class="search-btn">search</button>
+                    <a href="/login.html"><img src="img/user.png" alt=""></a>
+                    <a href="#"><img src="img/cart.png" alt=""></a>
+                </div>
+            </div>
+        </div>
     </header>
     <section class="content-section container">
-        <h2 class="section-header">ABOUT</h2>
+        <h2 class="section-header">STYING AND PROFILING</h2>
         <img class="about-band-image" src="">
 
     </section>
+    <!-- collections -->
+    <selection class="collection-container">
+        <a href="#" class="collection">
+            <img src="img/menscollection.png" alt="">
+        </a>
+    </selection>
+
+    <!-- collections -->
+    <selection class="collection-container">
+        <a href="#" class="collection">
+            <img src="img/boyscollection.png" alt="">
+
+        </a>
+    </selection>
 
     <footer class="main-footer">
         <div class="container main-footer-container">
