--- a/index.html
+++ b/index.html
@@ -9,24 +9,13 @@
 
 <body>
     <nav class="navbar"></nav>
-
     <header class="main-header">
         <!--hero section -->
         <header class="hero-section">
-            <div class="content">
-                <img src="img/light-logo.png" class="logo" alt="">
-            </div>
         </header>
         <nav class="navbar"></nav>
         <div class="nav">
-            <div class="nav-items">
-                <div class="search">
-                    <input type="text" class="search-box" placeholder="search items...">
-                    <button class="search-btn">search</button>
-                </div>
-                <img src="img/user.png" alt="">
-                <img src="img/cart.png" alt="">
-            </div>
+
         </div>
         <nav class="nav main-nav">
             <ul>
@@ -34,9 +23,22 @@
                 <li><a href="store.html">STORE</a></li>
                 <li><a href="about.html">ABOUT</a></li>
             </ul>
+            <div class="nav-items">
+                <div class="search">
+                    <input type="text" class="search-box" placeholder="search items...">
+                    <button class="search-btn">search</button>
+                    <a href="/login.html"><img src="img/user.png" alt=""></a>
+                    <a href="#"><img src="img/cart.png" alt=""></a>
+                </div>
+            </div>
         </nav>
-        <div class="container">
 
+        <div class="container">
+            <br>
+            <br>
+            <br>
+            <br>
+            <h1>Welcome to Style U, the best online store for men and boys clothing!!</h1>
         </div>
 
 
@@ -44,7 +46,6 @@
         </section>
         <footer class="main-footer">
             <div class="container main-footer-container">
-                <br>
                 <h3 class="band-name">Style U</h3>
             </div>
         </footer>
