--- a/store.html
+++ b/store.html
@@ -85,6 +85,22 @@
                     <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
                 </div>
             </div>
+            <div class="shop-item">
+                <span class="shop-item-title">Gold with Black Trim Blazer</span>
+                <img class="shop-item-image" src="img/boyblazer4.png">
+                <div class="shop-item-details">
+                    <span class="shop-item-price">$55</span>
+                    <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
+                </div>
+            </div>
+            <div class="shop-item">
+                <span class="shop-item-title">Multiblue with Black Trim Blazer</span>
+                <img class="shop-item-image" src="img/boyblazer5.png">
+                <div class="shop-item-details">
+                    <span class="shop-item-price">$55</span>
+                    <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
+                </div>
+            </div>
         </div>
     </section>
     <section class="container content-section">
