--- a/index.html
+++ b/index.html
@@ -1,54 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <title>Style U</title>
-    <meta name="description" content="This is the description">
-    <link rel="stylesheet" href="styles.css" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login Form</title>
+    <link rel="stylesheet" href="login.css" />
+
 </head>
 
 <body>
-    <nav class="navbar"></nav>
-    <header class="main-header">
-        <!--hero section -->
-        <header class="hero-section">
-        </header>
-        <nav class="navbar"></nav>
-        <div class="nav">
+    <ul>
+        <li><a href="index.html">HOME</a></li>
+        <li><a href="store.html">STORE</a></li>
+        <li><a href="about.html">ABOUT</a></li>
+    </ul>
 
-        </div>
-        <nav class="nav main-nav">
-            <ul>
-                <li><a href="index.html">HOME</a></li>
-                <li><a href="store.html">STORE</a></li>
-                <li><a href="about.html">ABOUT</a></li>
-            </ul>
-            <div class="nav-items">
-                <div class="search">
-                    <input type="text" class="search-box" placeholder="search items...">
-                    <button class="search-btn">search</button>
-                    <a href="/login.html"><img src="img/user.png" alt=""></a>
-                    <a href="#"><img src="img/cart.png" alt=""></a>
-                </div>
+    <div class="container">
+        <h2>Login</h2>
+        <form action="">
+            <input type="text" name="username" id="username" placeholder="username">
+            <input type="password" name="pass" id="pass" placeholder="password">
+            <div class="btns">
+                <button type="submit">Login</button>
+                <a href="./signup.html"><button type="button" id="sign-up">Sign Up</button></a>
             </div>
-        </nav>
 
-        <div class="container">
-            <br>
-            <br>
-            <br>
-            <br>
-            <h1>Welcome to Style U, the best online store for men and boys clothing!!</h1>
-        </div>
-
-
-        </div>
-        </section>
-        <footer class="main-footer">
-            <div class="container main-footer-container">
-                <h3 class="band-name">Style U</h3>
-            </div>
-        </footer>
+        </form>
+    </div>
 </body>
 
 </html>
