--- a/about.html
+++ b/about.html
@@ -29,7 +29,6 @@
     </header>
     <section class="content-section container">
         <h2 class="section-header">STYING AND PROFILING</h2>
-        <img class="about-band-image" src="">
 
     </section>
     <!-- collections -->
@@ -49,7 +48,7 @@
 
     <footer class="main-footer">
         <div class="container main-footer-container">
-            <h3 class="band-name">Style U!</h3>
+            <h3 class="company-name">Style U!</h3>
         </div>
     </footer>
 </body>
