--- a/store.html
+++ b/store.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <header class="main-header">
+    <header class="main-header" value="welcome (username)">
         <nav class="main-nav nav">
             <ul>
                 <li><a href="index.html">HOME</a></li>
@@ -27,7 +27,7 @@
                 </div>
             </div>
         </div>
-        <h1 class="band-name band-name-large"></h1>
+        <h1 class=""></h1>
     </header>
     <section class="container content-section">
         <h2 class="section-header">Mens Section</h2>
