--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
                     <input type="text" class="search-box" placeholder="search items...">
                     <button class="search-btn">search</button>
                     <a href="/login.html"><img src="img/user.png" alt=""></a>
-                    <a href="#"><img src="img/cart.png" alt=""></a>
+                    <a href=""><img src="img/cart.png" alt=""></a>
                 </div>
             </div>
         </nav>
@@ -46,7 +46,7 @@
         </section>
         <footer class="main-footer">
             <div class="container main-footer-container">
-                <h3 class="band-name">Style U</h3>
+                <h3 class="company-name">Style U</h3>
             </div>
         </footer>
 </body>
