--- a/signup.html
+++ b/signup.html
@@ -13,7 +13,7 @@
         <li><a href="about.html">ABOUT</a></li>
     </ul>
 
-    <form action="/action_page.php" style="border:1px solid #ccc">
+    <form action="/store.html" style="border:1px solid #ccc">
         <div class="container">
             <h1>Sign Up</h1>
             <p>Please fill in this form to create an account.</p>
