--- a/store.html
+++ b/store.html
@@ -12,7 +12,7 @@
     <header class="main-header" value="welcome (username)">
         <nav class="main-nav nav">
             <ul>
-                <li><a href="index.html">HOME</a></li>
+                <li><a href="home.html">HOME</a></li>
                 <li><a href="store.html">STORE</a></li>
                 <li><a href="about.html">ABOUT</a></li>
             </ul>
