--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <header class="main-header">
         <nav class="nav main-nav">
             <ul>
-                <li><a href="index.html">HOME</a></li>
+                <li><a href="home.html">HOME</a></li>
                 <li><a href="store.html">STORE</a></li>
                 <li><a href="about.html">ABOUT</a></li>
             </ul>
