--- a/signup.html
+++ b/signup.html
@@ -8,7 +8,7 @@
 
 <body>
     <ul>
-        <li><a href="index.html">HOME</a></li>
+        <li><a href="home.html">HOME</a></li>
         <li><a href="store.html">STORE</a></li>
         <li><a href="about.html">ABOUT</a></li>
     </ul>
