updated the login form and background

--- a/login.html
+++ b/login.html
@@ -12,12 +12,12 @@
         <h1> Login Form </h1>
     </center>
     <ul>
-        <li><a href="index.html">HOME</a></li>
+        <li><a href="home.html">HOME</a></li>
         <li><a href="store.html">STORE</a></li>
         <li><a href="about.html">ABOUT</a></li>
     </ul>
     <form>
-        <div class="container">
+        <div class="login-container">
             <label>Username : </label>
             <input type="text" placeholder="Enter Username" name="username" required>
             <label>Password : </label>
