--- a/login.html
+++ b/login.html
@@ -15,6 +15,7 @@
         <li><a href="home.html">HOME</a></li>
         <li><a href="store.html">STORE</a></li>
         <li><a href="about.html">ABOUT</a></li>
+        <li><a href="signup.html">SIGNUP</a></li>
     </ul>
     <form>
         <div class="login-container">
