--- a/login.html
+++ b/login.html
@@ -25,8 +25,7 @@
             <input type="password" placeholder="Enter Password" name="password" required>
             <button type="submit">Login</button>
             <input type="checkbox" checked="checked"> Remember me
-            <button type="button" class="cancelbtn"> Cancel</button>
-            Forgot <a href="#"> password? </a>
+            <br> Reset <a href="signup.html"> password? </a>
         </div>
     </form>
 </body>
