--- a/home.html
+++ b/home.html
@@ -8,48 +8,32 @@
 </head>
 
 <body>
-    <nav class="navbar"></nav>
     <header class="main-header">
-        <!--hero section -->
-        <header class="hero-section">
-        </header>
-        <nav class="navbar"></nav>
-        <div class="nav">
-
-        </div>
-        <nav class="nav main-nav">
-            <ul>
-                <li><a href="home.html">HOME</a></li>
-                <li><a href="store.html">STORE</a></li>
-                <li><a href="about.html">ABOUT</a></li>
-                <li><a href="signup.html">SIGNUP</a></li>
-            </ul>
-            <div class="nav-items">
-                <div class="search">
-                    <input type="text" class="search-box" placeholder="search items...">
-                    <button class="search-btn">search</button>
-                    <a href="/login.html"><img src="img/user.png" alt=""></a>
-                    <a href="#"><img src="img/cart.png" alt=""></a>
-                </div>
-            </div>
-        </nav>
-
         <div class="container">
-            <br>
-            <br>
-            <br>
-            <br>
-            <h1>Welcome to Style U, the best online store for men and boys clothing!!</h1>
-        </div>
+            <nav class="nav main-nav">
+                <ul>
+                    <li><a href="home.html">HOME</a></li>
+                    <li><a href="store.html">STORE</a></li>
+                    <li><a href="about.html">ABOUT</a></li>
+                    <li><a href="signup.html">SIGNUP</a></li>
+                </ul>
+                <div class="nav-items">
+                    <div class="search">
+                        <input type="text" class="search-box" placeholder="search items...">
+                        <button class="search-btn">search</button>
+                        <a href="/login.html"><img src="img/user.png" alt=""></a>
+                        <a href="#"><img src="img/cart.png" alt=""></a>
+                    </div>
+                </div>
+            </nav>
 
-
-        </div>
-        </section>
-        <footer class="main-footer">
-            <div class="container main-footer-container">
-                <h3 class="band-name">Style U</h3>
+            <div class="welcome">
+                <h1>Welcome to Style U</h1> 
+                    <h3>The best online store for men and boys clothing</h3>
+                <a href="store.html" class="button">Shop Now</a>
             </div>
-        </footer>
+        </div>
+    </header>
 </body>
 
 </html>
