--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <header class="main-header">
+    <header class="main-header1">
         <nav class="nav main-nav">
             <ul>
                 <li><a href="home.html">HOME</a></li>
