--- a/store.html
+++ b/store.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <header class="main-header" value="welcome (username)">
+    <header class="main-header1" value="welcome (username)">
         <nav class="main-nav nav">
             <ul>
                 <li><a href="home.html">HOME</a></li>
