--- a/signup.html
+++ b/signup.html
@@ -7,11 +7,25 @@
 </head>
 
 <body>
-    <ul>
-        <li><a href="home.html">HOME</a></li>
-        <li><a href="store.html">STORE</a></li>
-        <li><a href="about.html">ABOUT</a></li>
-    </ul>
+    <nav class="nav main-nav">
+        <ul>
+            <li><a href="home.html">HOME</a></li>
+            <li><a href="store.html">STORE</a></li>
+            <li><a href="about.html">ABOUT</a></li>
+            <li><a href="signup.html">SIGNUP</a></li>
+        </ul>
+    </nav>
+    <nav class="navbar"></nav>
+    <div class="nav">
+        <div class="nav-items">
+            <div class="search">
+                <input type="text" class="search-box" placeholder="search items...">
+                <button class="search-btn">search</button>
+                <a href="/login.html"><img src="img/user.png" alt=""></a>
+                <a href="#"><img src="img/cart.png" alt=""></a>
+            </div>
+        </div>
+    </div>
 
     <form action="/store.html" style="border:1px solid #ccc">
         <div class="container">
